30 June 2005:  Menelaos Karavelas
- added get_conflicts() methods (similar to those in regular and Delaunay
  triangulations); need to update the doc and the testsuite also.

26 June 2005:  Menelaos Karavelas
- doc: added Triangulation_data_structure type and tds() method; also added
  that the Apollonius_graph_2 class is a model of the DelaunayGraph_2 concept.
- doc: added Vertex and Face types in the Apollonius_graph_2 class; fixed
  some errors in the definition of the various iterators/circulators.
- AG2 class: almost all combinatorial types are now defined through Agds and 
  not the triangulation (except the Finite_*_iterator types).

21 June 2005:  Menelaos Karavelas
- removed unused code related to homogeneous coordinates/representations
- changed code in traits to minimize function/method calls
- renamed some methods

15 June 2005:  Menelaos Karavelas
- added layout widget in demo including a label; messages about the actions
  taken are now printed on the label.
- added file menu in demo; used for file I/O.
- added about boxes in demo.

13 June 2005:  Menelaos Karavelas
- changed messages/captions of the file toolbar of the demo program

4 June 2005:  Menelaos Karavelas
- Apollonius_graph_2 and Apollonius_graph_hierarchy_2: added methods file_input
  and file_output that read and write from and to a file. The data written
  consists of the visible and hidden sites and the triangulation data
  structure; in the case of the hierarchy, the entire hierarchy is encoded.
- Apollonius_graph_2 and Apollonius_graph_hierarchy_2: added operator>> and
  operator<< that read and write from and to a stream; the methods file_input
  and file_output are used to implement the two operators.
- modified the test suite to test the above mentioned I/O functionality.
- updated documentation to reflect the newly added I/O functionality.

1 June 2005:  Menelaos Karavelas
- added types Arity and result_type in Construct_Apollonius_vertex_2.